<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearColumnsafeguardYour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_2pxv"
        android:paddingTop="@dimen/_2pxv"
        style="@style/groupStyleteal_400">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/imageImagethreeOne"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_142pxh"
                android:layout_marginEnd="@dimen/_143pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_image_2"
                tools:ignore="ContentDescription" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearOnboarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_45pxv"
            android:paddingEnd="@dimen/_24pxh"
            android:paddingBottom="@dimen/_45pxv">

            <!-- TextView -->
            <TextView
                android:id="@+id/txtSafeguardyour"
                style="@style/txtPlusJakartaSansplusjakartasansbold48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:text="@string/msg_safeguard_your_skin" />

            <!-- TextView -->
            <TextView
                android:id="@+id/txtDescription"
                style="@style/txtPlusJakartaSansplusjakartasansbolditalic16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_marginEnd="@dimen/_43pxh"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:text="@string/msg_our_checker_app" />

            <!-- Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/btnSolidRounded"
                android:layout_width="@dimen/_327pxh"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginTop="@dimen/_57pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:text="@string/msg_sign_up_with_email"
                android:textAllCaps="false"
                tools:text="@string/msg_sign_up_with_email" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRowexisting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/_35pxv"
            android:layout_marginEnd="@dimen/_100pxh"
            android:layout_marginStart="@dimen/_109pxh"
            android:orientation="horizontal">

            <!-- TextView -->
            <TextView
                android:id="@+id/txtExisting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                style="@style/txtPlusJakartaSansplusjakartasansbolditalic14"
                android:text="@string/msg_existing_account"/>

            <!-- TextView -->
            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/_1pxh"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                style="@style/txtPlusJakartaSansplusjakartasansmedium14"
                android:text="@string/lbl_log_in"/>

        </LinearLayout>
    </LinearLayout>
</layout>
